--- a/setup.cfg
+++ b/setup.cfg
@@ -10,4 +10,4 @@ commit_parser = semantic_release.history.tag_parser
 minor_tag = [minor]
 fix_tag = [fix]
 branch = main
-# major_on_zero = false
+major_on_zero = false
