Adding some build and test infrastructure

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,3 +10,27 @@ commit_parser = semantic_release.history.tag_parser
 minor_tag = [minor]
 fix_tag = [fix]
 branch = main
+
+[flake8]
+ignore = E226, E231, E501
+
+[coverage:report]
+# Regexes for lines to exclude from consideration
+exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma: no cover
+
+    # Don't complain about missing debug-only code:
+    def __repr__
+    if self\.debug
+
+    # Don't complain if tests don't hit defensive assertion code:
+    raise AssertionError
+    raise NotImplementedError
+
+    # Don't complain if non-runnable code isn't run:
+    if 0:
+    if __name__ == .__main__.:
+omit =
+    *__init__*
+ignore_errors = True
