--- a/.github/workflows/try-setup-install.yml
+++ b/.github/workflows/try-setup-install.yml
@@ -3,46 +3,34 @@ name: Try Setup Install
 on: [push]
 
 jobs:
-  # confirm-all-py-versions:
-  #   runs-on: ubuntu-latest
 
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - run: |
-  #         echo "searching for supported python range in in setup.py..."
-  #         grep -P "\(\(\d+, ?\d+\), ?\(\d+, ?\d+\)\)" -oh setup.py | sed 's/ //g' | sed 's/,/./g' | grep -o -P "\d+\.\d+" > tmp.txt
-  #         echo "setup.py-indicated python range: $(head -n1 tmp.txt) - $(tail -n1 tmp.txt)"
-  #         echo "confirming min version in this GH Workflow..."
-  #         grep "python-version: \['$(head -n1 tmp.txt)" .github/workflows/try-setup-install.yml
-  #         echo "confirming max version in this GH Workflow..."
-  #         grep "python-version: .*'$(tail -n1 tmp.txt)'\]" .github/workflows/try-setup-install.yml
-  #         echo "all good, time for tests!"
-
-  gather-py-versions:
+  gather-py3-versions:
     runs-on: ubuntu-latest
     outputs:
-      matrix: ${{ steps.py_versions.outputs.matrix }}
+      matrix: ${{ steps.py3_versions.outputs.matrix }}
     steps:
       - name: Python Versions
-        id: py_versions
+        id: py3_versions
         run: |
-          versions=$(echo "3.6,3.7,3.8" |awk -F, '{for(i=1;i<=NF-1;i++) printf "\"" $i "\","; print "\"" $(NF) "\""}')
-          echo ::set-output name=matrix::{\"py_versions\":[$(echo $versions)]}\"
+          nums=$(grep -P "\(\(\d+, ?\d+\), ?\(\d+, ?\d+\)\)" -oh setup.py | sed 's/[^0-9]/ /g')
+          IFS=', ' read -r -a array <<< "$nums"
+          series=$(for i in `seq ${array[1]} ${array[3]}`; do printf "3.$i,"; done | rev | cut -c 2- | rev)
+          echo ::set-output name=matrix::{\"py3_versions\":[$(echo $series)]}\"
 
   setup-py-install:
-    needs: gather-py-versions
+    needs: gather-py3-versions
     runs-on: ubuntu-latest
 
     strategy:
       max-parallel: 4
       fail-fast: false
-      matrix: ${{ fromJSON(needs.gather-py-versions.outputs.matrix) }}
+      matrix: ${{ fromJSON(needs.gather-py3-versions.outputs.matrix) }}
 
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.py_versions }}
+          python-version: ${{ matrix.py3_versions }}
       - run: |
-          echo ${{ matrix.py_versions }}
+          echo ${{ matrix.py3_versions }}
           python setup.py install
