--- a/.github/workflows/try-setup-install.yml
+++ b/.github/workflows/try-setup-install.yml
@@ -19,7 +19,7 @@ jobs:
           echo ::set-output name=matrix::{\"py3_versions\":[$(echo $min_thru_max_series)]}\"
           echo $min_thru_max_series
 
-  setup-py-install:
+  pip-install:
     needs: gather-py3-versions
     runs-on: ubuntu-latest
 
@@ -34,5 +34,5 @@ jobs:
         with:
           python-version: ${{ matrix.py3_versions }}
       - run: |
-          echo ${{ matrix.py3_versions }}
-          python setup.py install
+          pip install --upgrade pip wheel setuptools
+          pip install --editable .
