--- a/tox.ini
+++ b/tox.ini
@@ -3,5 +3,5 @@ envlist = py
 
 [testenv]
 # requirements file has dev requirements
-deps = -rrequirements.txt
+deps = -rwipac_dev_tools/requirements.txt
 commands = pytest -vvv --flake8 --mypy {posargs}
