--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 # content of setup.cfg
-[tool:pytest]
-flake8-ignore = E501 E231 E226
+
+[flake8]
+ignore=E226,E261,E302,E305,E501,W503,W504
 
 [semantic_release]
 version_variable = wipac_dev_tools/__init__.py:__version__
