allow repo to have multiple reqs.txt

--- a/.github/workflows/python-linters.yml
+++ b/.github/workflows/python-linters.yml
@@ -25,5 +25,5 @@ jobs:
       - run: |
           ([ -e "requirements-dev.txt" ] && pip install -r requirements-dev.txt) || echo "no dev reqs"
       - run: |
-          ([ -e "setup.py" ] && pip install .) || pip install -r requirements.txt
+          ([ -e "setup.py" ] && pip install .) || pip install `find . -name 'requirements.txt' | rev | sed -z 's/\n/ r- /g' | rev`
       - run: mypy --install-types --namespace-packages --non-interactive --exclude build/ .
