--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,8 @@ keywords =
 	IceCube
 license = MIT
 classifiers =
+	Development Status :: 5 - Production/Stable
+	License :: OSI Approved :: MIT License
 	Programming Language :: Python :: 3.6
 	Programming Language :: Python :: 3.7
 	Programming Language :: Python :: 3.8
