use dashes in the pypi name

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [wipac:cicd_setup_builder]
-pypi_name = wipac_dev_tools
+pypi_name = wipac-dev-tools
 description = WIPAC Python Development Tools
 url = https://github.com/WIPACrepo/wipac-dev-tools
 main_or_master = main
