--- a/.github/workflows/setup-and-release.yml
+++ b/.github/workflows/setup-and-release.yml
@@ -2,7 +2,7 @@
 # https://github.com/WIPACrepo/wipac-dev-tools/blob/main/.github/workflows/setup-and-release.yml
 # Copy any updates to wipac-dev-tools.
 
-name: WIPAC CI/CD
+name: Update Setup/Requirements, Try-Install, and Release
 
 on: [push]
 
@@ -36,28 +36,6 @@ jobs:
           fi
           git commit -m "<Bot> Update setup & requirements"
           git push
-
-  flake8:
-    needs: update-setup-and-requirements
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-      - run: pip install flake8
-      - run: flake8 . --ignore=E203,E226,E228,E231,E501,W503,W504
-
-  mypy:
-    needs: update-setup-and-requirements
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-      - run: pip install mypy
-      - run: |
-          ([ -e "requirements-dev.txt" ] && pip install -r requirements-dev.txt) || echo "no dev reqs"
-      - run: |
-          ([ -e "setup.py" ] && pip install .) || pip install `find . -name 'requirements.txt' | rev | sed -z 's/\n/ r- /g' | rev`
-      - run: mypy --install-types --namespace-packages --non-interactive --exclude build/ .
 
   gather-py3-versions:
     needs: update-setup-and-requirements
