--- a/.github/workflows/setup-and-release.yml
+++ b/.github/workflows/setup-and-release.yml
@@ -38,8 +38,10 @@ jobs:
           fi
           git commit -m "<bot> Update setup & requirements"
           git push
+          exit 1  # prevent dependent job(s) since there's changes to the code
 
   release:
+    needs: build-setup
     runs-on: ubuntu-latest
     concurrency: release
 
