--- a/.github/workflows/try-setup-install.yml
+++ b/.github/workflows/try-setup-install.yml
@@ -14,6 +14,10 @@ jobs:
         id: py3_versions
         run: |
           minmin_maxmax=$(grep -P "python_requires = >=\d+.\d+, <\d+.\d+" -oh setup.cfg | sed 's/[^0-9]/ /g')
+          echo $minmin_maxmax
+          if [ -z "$minmin_maxmax" ]; then
+            exit 1
+          fi
           IFS=', ' read -r -a array <<< "$minmin_maxmax"
           min_thru_max_series=$(for i in `seq ${array[1]} $((array[3]-1))`; do printf "'3.$i',"; done | rev | cut -c 2- | rev)
           echo ::set-output name=matrix::{\"py3_versions\":[$(echo $min_thru_max_series)]}\"
