--- a/.github/workflows/setup-and-release.yml
+++ b/.github/workflows/setup-and-release.yml
@@ -36,7 +36,7 @@ jobs:
           if [ -z "$(git status --porcelain)" ]; then
             exit 0
           fi
-          git commit -m "<bot> Update setup & requirements"
+          git commit -m "<bot> update setup.cfg and/or requirements.txt"
           git push
           exit 1  # prevent dependent job(s) since there's changes to the code
 
