--- a/.github/workflows/try-setup-install.yml
+++ b/.github/workflows/try-setup-install.yml
@@ -16,6 +16,7 @@ jobs:
           minmin_maxmax=$(grep -P "python_requires = >=\d+.\d+, <\d+.\d+" -oh setup.cfg | sed 's/[^0-9]/ /g')
           echo $minmin_maxmax
           if [ -z "$minmin_maxmax" ]; then
+            echo "could not retrieve 'python_requires' from 'setup.cfg'"
             exit 1
           fi
           IFS=', ' read -r -a array <<< "$minmin_maxmax"
