--- a/.github/workflows/setup-and-release.yml
+++ b/.github/workflows/setup-and-release.yml
@@ -34,11 +34,13 @@ jobs:
           git config user.email github-actions@github.com
           git add .
           if [ -z "$(git status --porcelain)" ]; then
+            echo "no changes needed"
             exit 0
           fi
           git commit -m "<bot> update setup.cfg and/or requirements.txt"
           git push
           exit 1  # prevent dependent job(s) since there's changes to the code
+          echo "changes pushed (rest of workflow canceled)"
 
   release:
     needs: build-setup
