--- a/.github/workflows/setup-and-release.yml
+++ b/.github/workflows/setup-and-release.yml
@@ -40,6 +40,7 @@ jobs:
 
       - name: Push changes
         run: |
+          status=`git status 2>&1 | tee`
           ahead=`echo -n "${status}" 2> /dev/null | grep "Your branch is ahead of" &> /dev/null; echo "$?"`
           if [ "$ahead" -eq "1" ]; then
             echo "no changes needed"
