remove weird behavior with comments appending `= None`

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,7 +53,7 @@ flake8-ignore = E501 E231 E226
 ignore = E226, E231, E501, W503
 
 [coverage:report]
-# regexes for lines to exclude from consideration = None
+# regexes for lines to exclude from consideration
 exclude_lines =
 	# Have to re-enable the standard pragma
 	pragma: no cover
