--- a/.github/workflows/python-linters.yml
+++ b/.github/workflows/python-linters.yml
@@ -26,4 +26,7 @@ jobs:
           ([ -e "requirements-dev.txt" ] && pip install -r requirements-dev.txt) || echo "no dev reqs"
       - run: |
           ([ -e "setup.py" ] && pip install .) || pip install `find . -name 'requirements.txt' | rev | sed -z 's/\n/ r- /g' | rev`
-      - run: mypy --install-types --namespace-packages --non-interactive --exclude build/ .
+      - run: |
+          flags="--namespace-packages --exclude build/"
+          it_flags="--install-types --non-interactive"
+          (mypy $it_flags $flags . 2>/dev/null) || (echo "no type-packages to install" && mypy $flags .)
