--- a/.github/workflows/python-linters.yml
+++ b/.github/workflows/python-linters.yml
@@ -13,8 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
-      - run: pip install flake8
-      - run: flake8 . --ignore=E203,E226,E228,E231,E501,W503,W504
+      - uses: WIPACrepo/wipac-dev-flake8-action@main
 
   mypy:
     runs-on: ubuntu-latest
