--- a/.github/workflows/python-linters.yml
+++ b/.github/workflows/python-linters.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
-      - uses: WIPACrepo/wipac-dev-flake8-action@v1
+      - uses: WIPACrepo/wipac-dev-flake8-action@main
 
   mypy:
     runs-on: ubuntu-latest
