--- a/.github/workflows/python-linters.yml
+++ b/.github/workflows/python-linters.yml
@@ -20,4 +20,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
-      - uses: WIPACrepo/wipac-dev-mypy-action@main
+      - uses: WIPACrepo/wipac-dev-mypy-action@v1
