--- a/.github/workflows/try-setup-install.yml
+++ b/.github/workflows/try-setup-install.yml
@@ -14,30 +14,15 @@ jobs:
       matrix: ${{ steps.py3_versions.outputs.matrix }}
     steps:
       - uses: actions/checkout@v2
-      - name: Python Versions
-        id: py3_versions
-        run: |
-          pys=`grep -P "python_requires = >=\d+.\d+, <\d+.\d+" -oh setup.cfg` # exits if missing
-          minmin_maxmax=`echo "$pys" | sed 's/[^0-9]/ /g'`
-          echo $minmin_maxmax
-          if [ -z "$minmin_maxmax" ]; then
-            echo "could not retrieve 'python_requires' from 'setup.cfg'"
-            exit 1
-          fi
-          IFS=', ' read -r -a array <<< "$minmin_maxmax"
-          min_thru_max_series=$(for i in `seq ${array[1]} $((array[3]-1))`; do printf "'3.$i',"; done | rev | cut -c 2- | rev)
-          echo ::set-output name=matrix::{\"py3_versions\":[$(echo $min_thru_max_series)]}\"
-          echo $min_thru_max_series
+      - uses: WIPACrepo/wipac-dev-py-versions-action@main
 
   pip-install:
     needs: gather-py3-versions
     runs-on: ubuntu-latest
-
     strategy:
       max-parallel: 4
       fail-fast: false
       matrix: ${{ fromJSON(needs.gather-py3-versions.outputs.matrix) }}
-
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -45,4 +30,4 @@ jobs:
           python-version: ${{ matrix.py3_versions }}
       - run: |
           pip install --upgrade pip wheel setuptools
-          pip install --editable .
+          pip install .
