--- a/.github/workflows/try-setup-install.yml
+++ b/.github/workflows/try-setup-install.yml
@@ -11,10 +11,11 @@ jobs:
   gather-py3-versions:
     runs-on: ubuntu-latest
     outputs:
-      matrix: ${{ steps.py3_versions.outputs.matrix }}
+      matrix: ${{ steps.versions.outputs.matrix }}
     steps:
       - uses: actions/checkout@v2
-      - uses: WIPACrepo/wipac-dev-py-versions-action@main
+      - id: versions
+        uses: WIPACrepo/wipac-dev-py-versions-action@main
 
   pip-install:
     needs: gather-py3-versions
