--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -33,19 +33,36 @@ jobs:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
       - uses: WIPACrepo/wipac-dev-py-setup-action@v1
 
-  pip-install:
-    needs: [flake8, mypy, py-setup]
+  py-versions:
+    needs: [py-setup]
     runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.versions.outputs.matrix }}
+    steps:
+      - uses: actions/checkout@v2
+      - id: versions
+        uses: WIPACrepo/wipac-dev-py-versions-action@main
+
+  pip-install:
+    # FUTURE DEV: this can be expanded to run actual tests instead of just pip installing
+    needs: [py-versions]
+    runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 4
+      fail-fast: false
+      matrix: ${{ fromJSON(needs.py-versions.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.py3_versions }}
       - run: |
           pip install --upgrade pip wheel setuptools
           pip install .
 
   release:
     if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' }}
-    needs: [flake8, mypy, py-setup, pip-install]
+    needs: [py-setup, pip-install]
     runs-on: ubuntu-latest
     concurrency: release
     steps:
