--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -41,7 +41,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - id: versions
-        uses: WIPACrepo/wipac-dev-py-versions-action@main
+        uses: WIPACrepo/wipac-dev-py-versions-action@v1
 
   pip-install:
     # FUTURE DEV: this can be expanded to run actual tests instead of just pip installing
