call it `wipac ci/cd`

--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -2,7 +2,7 @@
 # https://github.com/WIPACrepo/wipac-dev-tools/blob/main/.github/workflows/wipac-cicd.yml
 # Copy any updates to wipac-dev-tools.
 
-name: WIPAC CI/CD
+name: wipac ci/cd
 
 on: [push]
 
