--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-      - uses: WIPACrepo/wipac-dev-py-setup-action@constants
+      - uses: WIPACrepo/wipac-dev-py-setup-action@v1.6
         with:
           base-keywords: "WIPAC IceCube"
 
