--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -42,7 +42,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - id: versions
-        uses: WIPACrepo/wipac-dev-py-versions-action@readme-updates
+        uses: WIPACrepo/wipac-dev-py-versions-action@v1.1
 
   pip-install:
     # FUTURE DEV: this can be expanded to run actual tests instead of just pip installing
