move tests to GH action

--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -44,12 +44,10 @@ jobs:
       - id: versions
         uses: WIPACrepo/wipac-dev-py-versions-action@v1.1
 
-  pip-install:
-    # FUTURE DEV: this can be expanded to run actual tests instead of just pip installing
+  tests:
     needs: [py-versions]
     runs-on: ubuntu-latest
     strategy:
-      max-parallel: 4
       fail-fast: false
       matrix: ${{ fromJSON(needs.py-versions.outputs.matrix) }}
     steps:
@@ -60,6 +58,7 @@ jobs:
       - run: |
           pip install --upgrade pip wheel setuptools
           pip install .
+          pytest -vvvv tests
 
   release:
     if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' }}
