--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           python-version: ${{ matrix.py3_versions }}
       - run: |
-          pip install --upgrade pip wheel setuptools
+          pip install --upgrade pip wheel setuptools pytest
           pip install .
           pytest -vvvv tests
 
