--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,8 @@ jobs:
           - checkout
           - run: |
               pip install --upgrade pip
-              pip install -r requirements.txt -r requirements-dev.txt
+              pip install -r requirements-dev.txt
+              pip install .
               pytest -vvvv --mypy --flake8 tests
 
 workflows:
