--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -44,12 +44,10 @@ jobs:
       - id: versions
         uses: WIPACrepo/wipac-dev-py-versions-action@v1.1
 
-  pip-install:
-    # FUTURE DEV: this can be expanded to run actual tests instead of just pip installing
+  tests:
     needs: [py-versions]
     runs-on: ubuntu-latest
     strategy:
-      max-parallel: 4
       fail-fast: false
       matrix: ${{ fromJSON(needs.py-versions.outputs.matrix) }}
     steps:
@@ -57,13 +55,15 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.py3_versions }}
-      - run: |
-          pip install --upgrade pip wheel setuptools
+      - name: Pytest
+        run: |
+          pip install --upgrade pip wheel setuptools pytest
           pip install .
+          pytest -vvvv tests
 
   release:
     if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' }}
-    needs: [py-setup, pip-install]
+    needs: [py-setup, tests]
     runs-on: ubuntu-latest
     concurrency: release
     steps:
