--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -33,6 +33,8 @@ jobs:
 
   py-versions:
     needs: [py-setup]
+    # do job if py-setup didn't explicitly fail
+    if: always() && (needs.py-setup.result == 'success' || needs.py-setup.result == 'skipped')
     runs-on: ubuntu-latest
     outputs:
       matrix: ${{ steps.versions.outputs.matrix }}
