--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -65,7 +65,8 @@ jobs:
           pytest -vvvv tests
 
   release:
-    if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' }}
+    # only run on main / master / <default>
+    if: ${{ always() && format('refs/heads/{0}', github.event.repository.default_branch) == github.ref }}
     needs: [py-setup, tests]
     runs-on: ubuntu-latest
     concurrency: release
