--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -19,25 +19,22 @@ jobs:
       - uses: WIPACrepo/wipac-dev-mypy-action@v1.1
 
   py-setup:
-    # dependabot can't access normal secrets
-    # we don't want to trigger an update on PR's merge to main
-    if: always() && github.actor != 'dependabot[bot]' && github.ref_type == 'branch'
     runs-on: ubuntu-latest
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: checkout
+      # dependabot can't access normal secrets
+      # & we don't want to trigger an update on PR's merge to main
+      - if: github.actor != 'dependabot[bot]' && github.ref_type == 'branch'
+        name: checkout
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-      - uses: WIPACrepo/wipac-dev-py-setup-action@v1.8
+      - if: github.actor != 'dependabot[bot]' && github.ref_type == 'branch'
+        uses: WIPACrepo/wipac-dev-py-setup-action@v1.8
         with:
           base-keywords: "WIPAC IceCube"
 
   py-versions:
     needs: [py-setup]
-    # do job if py-setup didn't explicitly fail
-    # https://github.com/actions/runner/issues/491#issuecomment-850884422
-    if: always() && (needs.py-setup.result == 'success' || needs.py-setup.result == 'skipped')
     runs-on: ubuntu-latest
     outputs:
       matrix: ${{ steps.versions.outputs.matrix }}
@@ -66,7 +63,7 @@ jobs:
 
   release:
     # only run on main / master / <default>
-    if: ${{ always() && format('refs/heads/{0}', github.event.repository.default_branch) == github.ref }}
+    if: format('refs/heads/{0}', github.event.repository.default_branch) == github.ref
     needs: [py-setup, tests]
     runs-on: ubuntu-latest
     concurrency: release
