--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -19,23 +19,23 @@ jobs:
       - uses: WIPACrepo/wipac-dev-mypy-action@v1.1
 
   py-setup:
-    if: github.actor != 'dependabot[bot]'  # dependabot can't access normal secrets
     runs-on: ubuntu-latest
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: checkout
+      # dependabot can't access normal secrets
+      # & we don't want to trigger an update on PR's merge to main
+      - if: github.actor != 'dependabot[bot]' && github.ref_type == 'branch'
+        name: checkout (only for non-dependabot branches)
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-      - uses: WIPACrepo/wipac-dev-py-setup-action@v1.8
+      - if: github.actor != 'dependabot[bot]' && github.ref_type == 'branch'
+        name: wipac-dev-py-setup-action (only for non-dependabot branches)
+        uses: WIPACrepo/wipac-dev-py-setup-action@v1.8
         with:
           base-keywords: "WIPAC IceCube"
 
   py-versions:
     needs: [py-setup]
-    # do job if py-setup didn't explicitly fail
-    # https://github.com/actions/runner/issues/491#issuecomment-850884422
-    if: always() && (needs.py-setup.result == 'success' || needs.py-setup.result == 'skipped')
     runs-on: ubuntu-latest
     outputs:
       matrix: ${{ steps.versions.outputs.matrix }}
@@ -63,7 +63,8 @@ jobs:
           pytest -vvvv tests
 
   release:
-    if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' }}
+    # only run on main / master / <default>
+    if: format('refs/heads/{0}', github.event.repository.default_branch) == github.ref
     needs: [py-setup, tests]
     runs-on: ubuntu-latest
     concurrency: release
