--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -22,14 +22,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # dependabot can't access normal secrets
-      # & we don't want to trigger an update on PR's merge to main
-      - if: github.actor != 'dependabot[bot]' && github.ref_type == 'branch'
-        name: checkout (only for non-dependabot branches)
+      #   & don't run non-branch triggers (like tags)
+      #   & we don't want to trigger an update on PR's merge to main/master/default (which is a branch)
+      # IOW: only for non-dependabot branches
+      - if: |
+          github.actor != 'dependabot[bot]' &&
+          github.ref_type == 'branch' &&
+          format('refs/heads/{0}', github.event.repository.default_branch) != github.ref
+        name: checkout (only for non-dependabot non-default branches)
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-      - if: github.actor != 'dependabot[bot]' && github.ref_type == 'branch'
-        name: wipac-dev-py-setup-action (only for non-dependabot branches)
+      - if: |
+          github.actor != 'dependabot[bot]' &&
+          github.ref_type == 'branch' &&
+          format('refs/heads/{0}', github.event.repository.default_branch) != github.ref
+        name: wipac-dev-py-setup-action (only for non-dependabot non-default branches)
         uses: WIPACrepo/wipac-dev-py-setup-action@v1.8
         with:
           base-keywords: "WIPAC IceCube"
@@ -63,7 +71,7 @@ jobs:
           pytest -vvvv tests
 
   release:
-    # only run on main / master / <default>
+    # only run on main/master/default
     if: format('refs/heads/{0}', github.event.repository.default_branch) == github.ref
     needs: [py-setup, tests]
     runs-on: ubuntu-latest
