--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -28,6 +28,9 @@ updates:
       prefix: "dependabot: "
       # include: ""  # currently only "scope" is allowed
     allow:
-      - dependency-type: "direct"
+      - dependency-type: "direct"  # all explicitly defined dependencies
     versioning-strategy: increase-if-necessary  # this allows not-exactly-equals pip notations (~=, ==v1.2.*, etc.)
     open-pull-requests-limit: 1  # this is per ecosystem
+    ignore:
+      - dependency-name: "*"
+        update-types: ["version-update:semver-patch"]
