--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -79,7 +79,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
-    - uses: python-semantic-release/python-semantic-release@master
+    - uses: python-semantic-release/python-semantic-release@v7.34.6
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         repository_username: __token__
