--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -58,6 +58,28 @@ jobs:
         with:
           base-keywords: WIPAC IceCube
 
+  py-dependencies:
+    runs-on: ubuntu-latest
+    steps:
+      # dependabot can't access normal secrets
+      #   & don't run non-branch triggers (like tags)
+      #   & we don't want to trigger an update on PR's merge to main/master/default (which is a branch)
+      # IOW: only for non-dependabot branches
+      - if: |
+          github.actor != 'dependabot[bot]' &&
+          github.ref_type == 'branch' &&
+          format('refs/heads/{0}', github.event.repository.default_branch) != github.ref
+        name: checkout (only for non-dependabot non-default branches)
+        uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+      - if: |
+          github.actor != 'dependabot[bot]' &&
+          github.ref_type == 'branch' &&
+          format('refs/heads/{0}', github.event.repository.default_branch) != github.ref
+        name: wipac-dev-py-setup-action (only for non-dependabot non-default branches)
+        uses: WIPACrepo/wipac-dev-py-dependencies-action@first
+
   tests:
     needs: [py-versions]
     runs-on: ubuntu-latest
@@ -79,7 +101,7 @@ jobs:
   release:
     # only run on main/master/default
     if: format('refs/heads/{0}', github.event.repository.default_branch) == github.ref
-    needs: [flake8, mypy, py-setup, tests]
+    needs: [flake8, mypy, py-setup, py-dependencies, tests]
     runs-on: ubuntu-latest
     concurrency: release
     steps:
