--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -78,7 +78,7 @@ jobs:
           github.ref_type == 'branch' &&
           format('refs/heads/{0}', github.event.repository.default_branch) != github.ref
         name: wipac-dev-py-setup-action (only for non-dependabot non-default branches)
-        uses: WIPACrepo/wipac-dev-py-dependencies-action@use-dev-tools
+        uses: WIPACrepo/wipac-dev-py-dependencies-action@v1.1
 
   tests:
     needs: [py-versions]
