--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -103,13 +103,23 @@ jobs:
     if: format('refs/heads/{0}', github.event.repository.default_branch) == github.ref
     needs: [flake8, mypy, py-setup, py-dependencies, tests]
     runs-on: ubuntu-latest
-    concurrency: release
+    concurrency: release  # prevent any possible race conditions
     steps:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
-    - uses: python-semantic-release/python-semantic-release@v7.34.6
+    # Python-Package Version Bump
+    - uses: python-semantic-release/python-semantic-release@master
+      id: release
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        repository_username: __token__
-        repository_password: ${{ secrets.PYPI_TOKEN }}
+    # PyPI Release
+    - uses: pypa/gh-action-pypi-publish@release/v1
+      if: steps.release.outputs.released == 'true'
+      with:
+        password: ${{ secrets.PYPI_TOKEN }}
+    # GitHub Release
+    - uses: python-semantic-release/upload-to-gh-release@main
+      if: steps.release.outputs.released == 'true'
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
