--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -13,6 +13,8 @@ jobs:
       - id: versions
         uses: WIPACrepo/wipac-dev-py-versions-action@v2.2
 
+  ######################################################################################
+
   flake8:
     runs-on: ubuntu-latest
     steps:
@@ -34,47 +36,50 @@ jobs:
           python-version: ${{ matrix.py3 }}
       - uses: WIPACrepo/wipac-dev-mypy-action@v2.0
 
-  py-setup:
+  ######################################################################################
+
+  dependabot-detect:
     runs-on: ubuntu-latest
+    outputs:
+      OKAY_BRANCH: ${{ steps.detect.outputs.OKAY_BRANCH }}
     steps:
-      # dependabot can't access normal secrets
-      #   & don't run non-branch triggers (like tags)
-      #   & we don't want to trigger an update on PR's merge to main/master/default (which is a branch)
-      # IOW: only for non-dependabot branches
-      - if: |
+      - name: is this a non-dependabot branch?
+        id: detect
+        # dependabot can't access normal secrets
+        #   & don't run non-branch triggers (like tags)
+        #   & we don't want to trigger an update on PR's merge to main/master/default (which is a branch)
+        if: |
           github.actor != 'dependabot[bot]' &&
           github.ref_type == 'branch' &&
           format('refs/heads/{0}', github.event.repository.default_branch) != github.ref
+        run: |
+          echo "OKAY_BRANCH=true" >> "$GITHUB_OUTPUT"
+
+  py-setup:
+    needs: [dependabot-detect]
+    runs-on: ubuntu-latest
+    steps:
+      - if: needs.job1.dependabot-detect.OKAY_BRANCH == 'true'
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-      - if: |
-          github.actor != 'dependabot[bot]' &&
-          github.ref_type == 'branch' &&
-          format('refs/heads/{0}', github.event.repository.default_branch) != github.ref
+      - if: needs.job1.dependabot-detect.OKAY_BRANCH == 'true'
         uses: WIPACrepo/wipac-dev-py-setup-action@v3.1
         with:
           base-keywords: WIPAC IceCube
 
   py-dependencies:
+    needs: [dependabot-detect]
     runs-on: ubuntu-latest
     steps:
-      # dependabot can't access normal secrets
-      #   & don't run non-branch triggers (like tags)
-      #   & we don't want to trigger an update on PR's merge to main/master/default (which is a branch)
-      # IOW: only for non-dependabot branches
-      - if: |
-          github.actor != 'dependabot[bot]' &&
-          github.ref_type == 'branch' &&
-          format('refs/heads/{0}', github.event.repository.default_branch) != github.ref
+      - if: needs.job1.dependabot-detect.OKAY_BRANCH == 'true'
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-      - if: |
-          github.actor != 'dependabot[bot]' &&
-          github.ref_type == 'branch' &&
-          format('refs/heads/{0}', github.event.repository.default_branch) != github.ref
+      - if: needs.job1.dependabot-detect.OKAY_BRANCH == 'true'
         uses: WIPACrepo/wipac-dev-py-dependencies-action@v1.1
+
+  ######################################################################################
 
   tests:
     needs: [py-versions]
@@ -93,6 +98,8 @@ jobs:
           pip install --upgrade pip wheel setuptools pytest
           pip install .[dev]
           pytest -vvvv tests
+
+  ######################################################################################
 
   release:
     # only run on main/master/default
