call it `writable-branch-detect`

--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -38,7 +38,7 @@ jobs:
 
   ######################################################################################
 
-  dependabot-detect:
+  writable-branch-detect:
     runs-on: ubuntu-latest
     outputs:
       OKAY_BRANCH: ${{ steps.detect.outputs.OKAY_BRANCH }}
@@ -56,27 +56,27 @@ jobs:
           echo "OKAY_BRANCH=true" >> "$GITHUB_OUTPUT"
 
   py-setup:
-    needs: [dependabot-detect]
+    needs: [writable-branch-detect]
     runs-on: ubuntu-latest
     steps:
-      - if: needs.job1.dependabot-detect.OKAY_BRANCH == 'true'
+      - if: needs.job1.writable-branch-detect.OKAY_BRANCH == 'true'
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-      - if: needs.job1.dependabot-detect.OKAY_BRANCH == 'true'
+      - if: needs.job1.writable-branch-detect.OKAY_BRANCH == 'true'
         uses: WIPACrepo/wipac-dev-py-setup-action@v3.1
         with:
           base-keywords: WIPAC IceCube
 
   py-dependencies:
-    needs: [dependabot-detect]
+    needs: [writable-branch-detect]
     runs-on: ubuntu-latest
     steps:
-      - if: needs.job1.dependabot-detect.OKAY_BRANCH == 'true'
+      - if: needs.job1.writable-branch-detect.OKAY_BRANCH == 'true'
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-      - if: needs.job1.dependabot-detect.OKAY_BRANCH == 'true'
+      - if: needs.job1.writable-branch-detect.OKAY_BRANCH == 'true'
         uses: WIPACrepo/wipac-dev-py-dependencies-action@v1.1
 
   ######################################################################################
