try `WIPACrepo/wipac-dev-py-versions-action@fix-json`

--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - id: versions
-        uses: WIPACrepo/wipac-dev-py-versions-action@v2.2
+        uses: WIPACrepo/wipac-dev-py-versions-action@fix-json
 
   ######################################################################################
 
