--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -72,7 +72,7 @@ jobs:
       - if: needs.writable-branch-detect.outputs.OKAY == 'true'
         uses: WIPACrepo/wipac-dev-py-setup-action@toml
         with:
-          base-keywords: WIPAC IceCube
+          base-keywords: WIPAC
 
   py-dependencies:
     needs: [writable-branch-detect]
