--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -72,6 +72,7 @@ jobs:
       - if: needs.writable-branch-detect.outputs.OKAY == 'true'
         uses: WIPACrepo/wipac-dev-py-setup-action@toml
         with:
+          python_min: 3.8
           base-keywords: WIPAC
 
   py-dependencies:
