use `WIPACrepo/wipac-dev-py-dependencies-action@pyproject.toml`

--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -87,7 +87,7 @@ jobs:
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
       - if: needs.writable-branch-detect.outputs.OKAY == 'true'
-        uses: WIPACrepo/wipac-dev-py-dependencies-action@v1.1
+        uses: WIPACrepo/wipac-dev-py-dependencies-action@pyproject.toml
 
   ######################################################################################
 
