--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -122,7 +122,7 @@ jobs:
         with:
           fetch-depth: 0
       # Python-Package Version Bump
-      - uses: python-semantic-release/python-semantic-release@master
+      - uses: python-semantic-release/python-semantic-release@v9.8.0
         id: release
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
